--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
           <p>Developed complicated software projects following industry standards.
             Front end, back end, web and software testing.
             Developed Technical Skills - JavaSE , JavaEE , JavaFX , JDBC, MySQL CSS3 , HTML5, Bootstrap
-            JavaScript , JQuery , TypeScript , Spring Framework , SASS , GIT, Angular 7, AJAX, JSON , Hibernate , Node.JS , Maven</p>
+            JavaScript , JQuery , TypeScript , Spring Framework , SASS , GIT, Angular 7, AJAX, JSON , Hibernate ,
+            Node.JS , Maven</p>
         </div>
       </div>
 
@@ -245,14 +246,7 @@
       </div>
       <!-- Filter -->
       <nav class="portfolio_filter">
-        <!-- <ul>
-        <li class="select-cat" data-filter="*">All</li>
-        <li data-filter=".web-design" class="">Java Development</li>
-        <li data-filter=".application" class="">Web-design</li>
-        <li data-filter=".development" class="">Front-end Development</li>
-      </ul> -->
       </nav> <!-- Portfolio filter end -->
-
       <div class="portfolio_items row">
 
         <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
@@ -270,8 +264,8 @@
                 Jasper Reports
                 </br>
 
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha/POS-in-memory"><span class="fab fa-github"></span></a>
+                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha/POS-in-memory"><span class="fab fa-github"></span></a> -->
                 <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
                     class="fab fa-youtube"></span></a> -->
 
@@ -301,11 +295,10 @@
                 Jasper Reports
                 </br>
 
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
                 <a href="https://github.com/IshanLakshitha/Library-System-JavaFX"><span
-                    class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/watch?v=hqpcCqDUKak&t=2s"><span
-                    class="fab fa-youtube"></span></a>
+                    class="fab fa-github"></span></a> -->
+                <a href="https://www.youtube.com/watch?v=hqpcCqDUKak&t=2s"><span class="fab fa-youtube"></span></a>
 
 
               </p>
@@ -336,9 +329,9 @@
                 Jasper Reports
                 </br>
 
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
                 <a href="https://github.com/IshanLakshitha/Students-Registation-System"><span
-                    class="fab fa-github"></span></a>
+                    class="fab fa-github"></span></a> -->
                 <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
                     class="fab fa-youtube"></span></a> -->
 
@@ -348,94 +341,7 @@
           </div>
         </div>
 
-        <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
-          <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal4">
-            <img src="assets/images/folio/work-4.jpg" alt="">
-          </a>
-          <div id="image-modal4" class="modal-box mfp-hide">
-            <img src="assets/images/folio/work-big-4.jpg" alt="">
-            <div class="modal-box-content">
-              <h4>Point of Sale with MySQL</h4>
-              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-              <p>Technology Stack 💥
 
-                JavaFx,
-                MySQL,
-                Jasper Reports
-
-                </br>
-
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha/Point-of-Sale-JavaFX"><span class="fab fa-github"></span></a>
-                <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a> -->
-
-
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
-          <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal5">
-            <img src="assets/images/folio/work-4.jpg" alt="">
-          </a>
-          <div id="image-modal5" class="modal-box mfp-hide">
-            <img src="assets/images/folio/work-big-4.jpg" alt="">
-            <div class="modal-box-content">
-              <h4>Point of Sale with Native Hibernate</h4>
-              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-              <p>Technology Stack 💥
-
-                JavaFX ,
-                JDBC ,
-                Scene Builder ,
-                Application Architecture,
-                Hibernate
-
-                </br>
-
-                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a> -->
-                <a href="https://github.com/IshanLakshitha/POS-Application-Architecture-Native-Hibernate"><span class="fab fa-github"></span></a>
-                <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a> -->
-
-
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
-          <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal6">
-            <img src="assets/images/folio/work-4.jpg" alt="">
-          </a>
-          <div id="image-modal6" class="modal-box mfp-hide">
-            <img src="assets/images/folio/work-big-4.jpg" alt="">
-            <div class="modal-box-content">
-              <h4>Point of Sale with JPA</h4>
-              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-              <p>Technology Stack 💥
-
-                JavaFX ,
-                JDBC ,
-                Scene Builder ,
-                Application Architecture,
-                JPA
-
-                </br>
-
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a>
-
-              </p>
-            </div>
-          </div>
-        </div>
         <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
           <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal7">
             <img src="assets/images/folio/work-4.jpg" alt="">
@@ -457,10 +363,10 @@
 
                 </br>
 
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
                 <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
                 <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a>
+                    class="fab fa-youtube"></span></a> -->
 
               </p>
             </div>
@@ -487,28 +393,14 @@
 
                 </br>
 
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
                 <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
                 <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a>
-
+                    class="fab fa-youtube"></span></a> -->
               </p>
             </div>
           </div>
         </div>
-        <!-- <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
-          <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal9">
-            <img src="assets/images/folio/work-4.jpg" alt="">
-          </a>
-          <div id="image-modal9" class="modal-box mfp-hide">
-            <img src="assets/images/folio/work-big-4.jpg" alt="">
-            <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
-            </div>
-          </div>
-        </div> -->
         <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
           <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal20">
             <img src="assets/images/folio/work-5.jpg" alt="">
@@ -517,21 +409,23 @@
             <img src="assets/images/folio/work-big-5.jpg" alt="">
             <div class="modal-box-content">
               <h4>Admin Dashboard</h4>
-              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+              <!-- <p>This is a project a done according to the using Javafx which facilitates the customer to place the
+                orders. This also provides the ability of adding new customers and to enter new items to the system.</p> -->
               <p>Technology Stack 💥
 
-                <!-- JavaFX ,
-                JDBC ,
-                Scene Builder ,
-                Jasper Reports -->
+                HTML ,
+                CSS ,
+                SASS ,
+                Angular ,
+                Java ,
+                MySQL
 
                 </br>
 
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
                 <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
                 <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a>
+                    class="fab fa-youtube"></span></a> -->
 
               </p>
             </div>
