--- a/index.html
+++ b/index.html
@@ -390,9 +390,7 @@
                 Application Architecture,
                 JPA
                 Spring
-
                 </br>
-
                 <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
                 <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
                 <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
@@ -412,25 +410,57 @@
               <!-- <p>This is a project a done according to the using Javafx which facilitates the customer to place the
                 orders. This also provides the ability of adding new customers and to enter new items to the system.</p> -->
               <p>Technology Stack 💥
-
                 HTML ,
                 CSS ,
                 SASS ,
                 Angular ,
                 Java ,
                 MySQL
-
                 </br>
-
-                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a> -->
-
               </p>
             </div>
           </div>
         </div>
+        <!-- <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
+            <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal20">
+              <img src="assets/images/folio/work-6.jpg" alt="">
+            </a>
+            <div id="image-modal20" class="modal-box mfp-hide">
+              <img src="assets/images/folio/work-big-6.jpg" alt="">
+              <div class="modal-box-content">
+                <h4>Admin Dashboard</h4>
+               <p>Technology Stack 💥
+                  HTML ,
+                  CSS ,
+                  SASS ,
+                  Angular ,
+                  Java ,
+                  MySQL
+                  </br>
+                </p>
+              </div>
+            </div>
+          </div> -->
+          <!-- <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
+              <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal20">
+                <img src="assets/images/folio/work-7.jpg" alt="">
+              </a>
+              <div id="image-modal20" class="modal-box mfp-hide">
+                <img src="assets/images/folio/work-big-7.jpg" alt="">
+                <div class="modal-box-content">
+                  <h4>Admin Dashboard</h4>
+                 <p>Technology Stack 💥
+                    HTML ,
+                    CSS ,
+                    SASS ,
+                    Angular ,
+                    Java ,
+                    MySQL
+                    </br>
+                  </p>
+                </div>
+              </div>
+            </div> -->
 
 
 
@@ -502,7 +532,7 @@
           </div>
           <div class="contactBox">
             <h5><i class="fa fa-phone" aria-hidden="true"></i>Phone:</h5>
-            <p>+(123) 456 789 </p>
+            <p>+94 71 490 3900 </p>
           </div>
           <div class="contactBox">
             <h5><i class="fa fa-paper-plane" aria-hidden="true"></i>E-mail:</h5>
